--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,4 @@ pistoncore-input = "0.19.0"
 interpolation = "0.1.0"
 piston2d-graphics = "0.21.0"
 piston-ai_behavior = "0.21.0"
-uuid = "0.1.17"
+uuid = { version = "0.5.1", features = ["v4"] }
